@@ -1043,10 +1043,6 @@ HRESULT CApplication::Create()
 HRESULT CApplication::Initialize()
 {
   CLog::Log(LOGINFO, "creating subdirectories");
-  if (g_stSettings.szThumbnailsDirectory[0] == 0)
-  {
-    strcpy(g_stSettings.szThumbnailsDirectory, "Q:\\thumbs");
-  }
   if (g_stSettings.m_szShortcutDirectory[0] == 0 && !g_guiSettings.GetBool("MyPrograms.NoShortcuts"))
   {
     strcpy(g_stSettings.m_szShortcutDirectory, "Q:\\shortcuts");
@@ -1063,6 +1059,11 @@ HRESULT CApplication::Initialize()
   {
     strcpy(g_stSettings.m_szScreenshotsDirectory, "Q:\\screenshots");
   }
+
+  CLog::Log(LOGINFO, "  shortcuts folder:%s", g_stSettings.m_szShortcutDirectory);
+  CLog::Log(LOGINFO, "  albums folder:%s", g_stSettings.m_szAlbumDirectory);
+  CLog::Log(LOGINFO, "  recording folder:%s", g_stSettings.m_szMusicRecordingDirectory);
+  CLog::Log(LOGINFO, "  screenshots folder:%s", g_stSettings.m_szScreenshotsDirectory);
 
   CreateDirectory(g_stSettings.szThumbnailsDirectory, NULL);
   CStdString strThumbIMDB = g_stSettings.szThumbnailsDirectory;
@@ -1081,6 +1082,10 @@ HRESULT CApplication::Initialize()
   CreateDirectory(g_stSettings.m_szMusicRecordingDirectory, NULL);
   CreateDirectory(g_stSettings.m_szScreenshotsDirectory, NULL);
 
+  if (g_stSettings.szThumbnailsDirectory[0] == 0)
+  {
+    strcpy(g_stSettings.szThumbnailsDirectory, "Q:\\thumbs");
+  }
   CLog::Log(LOGINFO, "  thumbnails folder:%s", g_stSettings.szThumbnailsDirectory);
   for (unsigned int hex=0; hex < 16; hex++)
   {
@@ -1091,13 +1096,22 @@ HRESULT CApplication::Initialize()
     CreateDirectory(strThumbLoc.c_str(),NULL);
   }
 
-  CLog::Log(LOGINFO, "  shortcuts folder:%s", g_stSettings.m_szShortcutDirectory);
-  CLog::Log(LOGINFO, "  albums folder:%s", g_stSettings.m_szAlbumDirectory);
-  CLog::Log(LOGINFO, "  recording folder:%s", g_stSettings.m_szMusicRecordingDirectory);
-  CLog::Log(LOGINFO, "  screenshots folder:%s", g_stSettings.m_szScreenshotsDirectory);
+  // create playlist folders
+  if (g_stSettings.m_szPlaylistsDirectory[0] == 0)
+  {
+    // default to playlist subdir off of albums location like in the past
+    CStdString strDir;
+    CUtil::AddFileToFolder(g_stSettings.m_szAlbumDirectory, "playlists", strDir);
+    CUtil::AddSlashAtEnd(strDir);
+    strcpy(g_stSettings.m_szPlaylistsDirectory, strDir.c_str());
+  }
+  CLog::Log(LOGINFO, "  playlists folder:%s", g_stSettings.m_szPlaylistsDirectory);
+  CreateDirectory(g_stSettings.m_szPlaylistsDirectory, NULL);
+  CreateDirectory(CUtil::MusicPlaylistsLocation().c_str(), NULL);
+  CreateDirectory(CUtil::VideoPlaylistsLocation().c_str(), NULL);
 
+  // create album subfolders
   string strAlbumDir = g_stSettings.m_szAlbumDirectory;
-  CreateDirectory((strAlbumDir + "\\playlists").c_str(), NULL);
   CreateDirectory((strAlbumDir + "\\cddb").c_str(), NULL);
   CreateDirectory((strAlbumDir + "\\thumbs").c_str(), NULL); // contains the album thumbs
   CreateDirectory((strAlbumDir + "\\thumbs\\temp").c_str(), NULL);
